# PEL_Grupal_1

./: README.md
ProyectoGrupal1/: CMakeLists.txt  LIBPEL.h  main.cpp  model.hpp
